0.165

- Allow disabling the compression of log files for HTTP client and server.

0.164

- Fix HTTP server log of trace tokens when using async responses.
- Do not require testing library when using ConfigAssertions.
- Add logging support to HTTP client. Logging is turned off by default
  and it can be enabled with the "http-client.log.enabled" config parameter.
- Add JmxGcMonitor to track GC events. GC events are logged,
  and aggregate time stats are published via JMX.
- Add MoreFutures.addSuccessCallback() methods.
- Make launcher compatible with Python 3.
- Add support for monitoring HTTP client/server connection stats.

* 0.163

- Add whenAnyCompleteCancelOthers for ListenableFuture.

* 0.162

- Fix shutdown of HTTP clients when lifecycle is stopped.
- Change queue size for HTTP asynchronous logging to be configurable.

* 0.161

- Allow binding config defaults for HTTP client threads.
- Make JsonFactory used for ObjectMapperProvider configurable.

* 0.160

- Use a dedicated thread pool for each HTTP client. The HTTP client binder
  no longer has a withPrivateIoThreadPool() method as all pools are private.
- Use colon instead of space for LD_PRELOAD separator in launcher.

* 0.159

- Update to Jetty 9.4.8.v20171121.
- Fix building against JMX module on Java 9.
- Fix running on Java 9 due to a missing javax.annotations dependency.
- Fix HTTP/2 errors with JAX-RS by disabling remote async error notifications.
- Add HTTP/2 stream idle timeout config to HTTP server.

* 0.158

- Add support for setting process name on Linux ppc64le.
- Rename HTTP client selector config parameter to "http-client.selector-count".
- Add HTTP client option to perform connect operations in blocking mode.
- Add HTTP server option to disable recording request complete information.
- Reduce HTTP client executor load when using IP address literals.

* 0.157

- Fix Kerberos SPNEGO handling in HTTP client.

* 0.156

- Add HTTP client selector thread count config.